# DevOps-Chessington-Python

./: .env  .gitignore  README.md  pyproject.toml
chessington/: app.py
chessington/engine/: board.py  pieces.py
chessington/static/scripts/: board.js  client.js  main.js  package-lock.json  package.json  piece.js
chessington/templates/: index.html
chessington/ui/: __init__.py  app.py  images.py
chessington/ui/static/scripts/: board.js  image_loader.js  main.js
