[tool.poetry]
name = "chessington"
version = "0.1.0"
description = ""
authors = ["Sam Cappleman-Lynes <sam.cappleman-lynes@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.0"
python-dotenv = "^1.0.0"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
